<resources>
    <string name="app_name">Tido Pay</string>
    <string name="tido_wallet_title" translatable="false">Tido Pay</string>
    <string name="sign_in_title">Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile_number_title">Mobile Number</string>
    <string name="password_title">Password</string>
    <string name="dont_title">Don\'t have account ?  <font color='#002171'> Sign Up</font></string>
    <string name="write_your_number_title">Write Number in format 01xxxxx</string>
    <string name="verify_mobile_number_titlee">Verify Mobile Number</string>
    <string name="enter_code_sent_to_you_title">Enter Code Sent to you</string>
    <string name="enter_password_title">Enter Password</string>
    <string name="verify_code">Verify Code</string>
    <string name="register_title">Register</string>
    <string name="enter_email_title">Enter Email</string>
    <string name="email_title">Email</string>
    <string name="sign_out_title">Sign Out</string>
    <string name="enter_mobile">Enter valid  number please</string>
    <string name="email_not_empty">Enter your email</string>
    <string name="password_not_empty">Enter Password Please</string>
    <string name="password_not_less_than_6">Password Not less than 8 characters</string>
    <string name="enter_valid_Code">Enter code sent to you</string>
    <string name="welcome_title">Welcome</string>
    <string name="login_to_continue_title">Login to continue</string>
    <string name="create_account_to_continue_title">Create Account </string>
    <string name="money">Wallet</string>
    <string name="qr_code_title">Qr Code</string>
    <string name="transactions">Transactions</string>
    <string name="settings">Settings</string>
    <string name="transactions_here_title">Transactions here</string>
    <string name="settings_title">Settings</string>
    <string name="current_balance_title">Current Balance</string>
    <string name="withdraw_title">Deposit</string>
    <string name="_5000_egp_title">5000 EGP</string>
    <string name="transaction_history_title">Transaction History</string>
    <string name="change_language_title">Change Language</string>
    <string name="arabic_title">العربية</string>
    <string name="english_title">English</string>
    <string name="change_lanugage_title">Change Lanugage</string>
    <string name="add_money_title">Add Money</string>
    <string name="enter_amount_title">Enter amount</string>
    <string name="maximum">Maximum amount to be in your balance is 1000 EGP</string>
    <string name="charge_your_wallet_title">Charge your wallet</string>
    <string name="scan_now_to_buy_title">Click here to begin scanning</string>
    <string name="no_transactions_yet_title">No Transactions yet</string>
    <string name="buy_item">Are you sure you want to Buy this Item?</string>
    <string name="buy_item_title">Buy Item</string>
    <string name="egp">EGP</string>

    <string name="not_allowed">You don\'t have enough Mony to complete transaction</string>
</resources>