<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.main.fragments.SettingsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:textSize="24sp"
        android:id="@+id/tv_change_language"
        android:textColor="@color/colorDark"
        android:fontFamily="@font/tajawal_bold"
        app:layout_constraintTop_toTopOf="parent"
        />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_change_language"
        android:orientation="vertical"
        android:id="@+id/rd_btn"
        app:layout_constraintTop_toBottomOf="@id/tv_change_language">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorDark"
            android:textColor="@color/colorDark"
            android:text="@string/arabic_title"
            android:id="@+id/arabic"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorDark"
            android:textColor="@color/colorDark"
            android:text="@string/english_title"
            android:id="@+id/english"
            />
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_margin="50dp"
        android:layout_height="wrap_content"
        android:text="@string/change_lanugage_title"
        android:textAllCaps="false"
        android:id="@+id/btn_change_language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rd_btn"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_margin="50dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_title"
        android:textAllCaps="false"
        android:id="@+id/btn_signOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>