<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.Login.fragments.sign_in.SignInFragment">


    <com.tidow.tidowallet.custom.CustomTitleEditText
        android:layout_width="0dp"
        android:id="@+id/custom_mobile"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number_title"
        android:inputType="number"
        android:maxLength="15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.tidow.tidowallet.custom.CustomTitleEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_title"
        android:inputType="textPassword"
        android:id="@+id/custom_password"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/custom_mobile"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.button.MaterialButton
        app:cornerRadius="10dp"
        android:text="@string/sign_in_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_password"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/btnStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_signUp"
        android:padding="5dp"
        android:textSize="16sp"
        android:text="@string/dont_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>