<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.Login.fragments.register.password.PasswordFragment">



  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/create_account_to_continue_title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:textStyle="bold"
      android:layout_marginTop="30dp"
      android:fontFamily="@font/tajawal_bold"
      android:textColor="@color/colorDark"
      android:id="@+id/tv_register"
      android:textSize="24sp"
      />

  <com.tidow.tidowallet.custom.CustomTitleEditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/enter_email_title"
      android:inputType="text"
      android:id="@+id/custom_email"
      android:maxLength="100"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_register"
      android:layout_marginTop="40dp"
      app:layout_constraintEnd_toEndOf="parent"
      />


  <com.tidow.tidowallet.custom.CustomTitleEditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/custom_password"
      android:text="@string/enter_password_title"
      android:layout_marginTop="10dp"
      android:inputType="textPassword"
      android:maxLength="15"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/custom_email"
      app:layout_constraintEnd_toEndOf="parent"
      />


  <com.google.android.material.button.MaterialButton
      app:cornerRadius="10dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/register_title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/custom_password"
      android:layout_marginTop="20dp"
      android:id="@+id/btn_register"
      app:layout_constraintEnd_toEndOf="parent"
      style="?attr/materialButtonOutlinedStyle"
      android:textColor="@color/white"
      android:textAllCaps="false"
      android:textStyle="bold"
      android:backgroundTint="@color/colorDark"



      />


</androidx.constraintlayout.widget.ConstraintLayout>